Update 5-3. NEW FIORI 총정리.md

--- a/RAP/5-3. NEW FIORI 총정리.md
+++ b/RAP/5-3. NEW FIORI 총정리.md
@@ -1,1 +1,41 @@
+# 02/03
+</br>
+
+## < ABAP Editor Code Completion >
+- `CTRL + Space` : 코드 자동완성 호출
+- `Shift + Enter` Or `CTRL + Space + Enter` : 선택한 메서드 템플릿 자동 삽입
+- `CTRL + 백틱` : 터미널 창 열기
+- `npm run start` : 실행
+- `F12` : 디버깅 확인
+- `F5` : 새로고침
+</br>
+
+- `SAPGUI` 로 열기
+<img width="484" height="253" alt="image" src="https://github.com/user-attachments/assets/be16d7c0-188f-42c7-98ff-5036728b9199" />
+</br>
+</br>
+
+- SAP Fiori(UI5)는 BTP(BAS)에서 개발되고, Cloud Connector를 통해 온프레미스 SAP System과 연결됨
+<img width="410" height="203" alt="image" src="https://github.com/user-attachments/assets/d809a3a8-438c-452e-b517-bd701a8c8160" />
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+- 전역모델
+<img width="404" height="278" alt="image" src="https://github.com/user-attachments/assets/c42bf161-6b09-4c7e-96c0-b864f53078fc" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
 
