Update 5-3. NEW FIORI 총정리.md

--- a/RAP/5-3. NEW FIORI 총정리.md
+++ b/RAP/5-3. NEW FIORI 총정리.md
@@ -38,4 +38,485 @@
 
 </br>
 
+# 02/04
+</br>
+
+## <  핵심 개념 >
+- **1) `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정**
+- **2) `\n` : 줄바꿈**
+- **3) `<ToolbarSpacer />` : 버튼 끝에 추가**
+- **4) `Ctrl + Space` : 함수 자동완성 단축**
+</br>
+</br>
+
+---
+
+</br>
+
+# < FIORI 복습 >
+</br>
+
+## < 추가적인 개념 정리 >
+</br>
+
+- `/` 붙이면 그대로 출력
+<img width="501" height="228" alt="image" src="https://github.com/user-attachments/assets/8dede643-e566-4ec1-a296-51a923fdada6" />
+
+</br>
+</br>
+</br>
+</br>
+
+### < Fiori OData 서비스 추가 연결 >
+</br>
+
+- `Network` 에서 `meta` 검색 후 들어가기
+<img width="471" height="254" alt="image" src="https://github.com/user-attachments/assets/8252554b-bd09-489a-a1ea-360304d675a7" />
+</br>
+</br>
+</br>
+
+**1) `Open Application Info` 선택**
+
+<img width="456" height="231" alt="image" src="https://github.com/user-attachments/assets/991dca8c-b3db-474f-9fb9-6b78ff60de0c" />
+</br>
+</br>
+
+**2) `Manage service Models` 선택**
+
+<img width="589" height="242" alt="image" src="https://github.com/user-attachments/assets/af122b73-f236-4732-9570-b0614e449edd" />
+</br>
+</br>
+
+**3) `oData` 생성**
+
+<img width="599" height="350" alt="image" src="https://github.com/user-attachments/assets/3feda1a1-2a86-4d70-ad4d-7d23b56b4500" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+
+### < OData EntitySet 조회 형식 차이 >
+- `/<EntitySet>?$format=json` : 해당 EntitySet 데이터를 JSON 형식으로 조회
+```
+https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/opu/odata/sap/ZCODE_PERSON2_SRV/PersonSet?$format=json
+```
+<img width="535" height="212" alt="image" src="https://github.com/user-attachments/assets/7aefd8dd-43d4-4607-8b8c-04aa2d760973" />
+</br>
+</br>
+
+- `/<EntitySet>` : 해당 EntitySet 데이터를 OData 기본 화면(XML/브라우저용)으로 조회
+```
+https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/opu/odata/sap/ZCODE_PERSON2_SRV/PersonSet
+```
+<img width="682" height="237" alt="image" src="https://github.com/user-attachments/assets/6042266a-b9f6-486a-8cae-b7658558bf3a" />
+
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1: Aggregation Binding을 이용한 리스트 데이터 바인딩 실습
+- `\` 붙이면 그대로 출력
+- Aggregation Binding 실습
+  
+<img width="610" height="253" alt="image" src="https://github.com/user-attachments/assets/4ae09177-4afa-46a9-a646-ee25f74ec895" />
+
+</br>
+</br>
+</br>
+
+### 1. Main.controller.js
+```java
+// test 프로그램
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onInit() {
+            let oModel = this.getOwnerComponent().getModel(); // 기본 (빈문자열) 모델을 가져옴
+            let oMainModel = this.getOwnerComponent().getModel("main"); // main 모델을 가져옴
+
+            // 해당 라인에서 디버깅이 실행됨. 단, 개발자도구가 켜져있는 상태여야 함
+            // debugger; 
+
+            let oData = {
+                name : { 
+                    FirstName : "홍", 
+                    LastName : "길동"
+                 },
+                age : 30,
+                salary : "4000만원",
+                list : [
+                    { ProductNo : "P001", ProdectName : "책상", price : 10000 },
+                    { ProductNo : "P002", ProdectName : "키보드", price : 5000 },
+                    { ProductNo : "P003", ProdectName : "물티슈", price : 1000 },
+                    { ProductNo : "P004", ProdectName : "의자", price :30000 }
+                ]
+            };
+            let oJSONModel = new JSONModel(oData);
+            // 모델 이름 생략 시 빈 문자열
+            // 기존에 기본모델이 존재한다면 해당 모델을 덮어씀
+            // 따라서 모델 이름을 부여해서 각 모델을 구분할 수 있도록 함
+            // this.getView().setModel(모델객체, 모델이름); 
+            this.getView().setModel(oJSONModel, "view"); 
+
+            // 모델에 들어있는 데이터를 화면에 표시하기 위해서
+            // "바인딩(Binding)" 이라는 것을 사용
+            // 기본 문법
+            // <tag name="{모델이름>/경로}" />  모델 이름이 있는 경우
+            // <tag name="{/경로}" />           모델 이름이 없는 경우(기본)
+            // 경로는 JSON 객체의 key 값으로 접근
+            // => {모델이름>/key1/key2} 와 같이 하위로 내려갈 수 있음
+        }
+    });
+});
+```
+</br>
+
+### 2. Main.view.xml
+```html
+// test 프로그램
+
+<mvc:View controllerName="test1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns:l = "sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <l:Grid containerQuery="true" 
+                class="sapUiSmallMargin"
+                defaultSpan="XL3 L4 M4 S12">
+                <Input value="{view>/name/FirstName}" description="\{view>/name/FirstName}"/>
+                <Input value="{view>/name/LastName}" description="\{view>/name/LastName}"/>
+                <Input value="{view>/age}" description="\{view>/age}"/>
+                <Input value="{view>/salary}" description="\{view>/salary}"/>
+        </l:Grid>
+
+        <!-- sap.m.table 추가 -->
+        <Table id="idProductsTable"
+            inset="false"
+            items="{view>/list}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Products" level="H2"/>
+                        <ToolbarSpacer />
+                        <ComboBox id="idPopinLayout"
+                            placeholder="Popin layout options"
+                            change="onPopinLayoutChanged">
+                            <items>
+                                <core:Item  text="Block"
+                                    key="Block"/>
+                                <core:Item  text="Grid Large"
+                                    key="GridLarge"/>
+                                <core:Item  text="Grid Small"
+                                    key="GridSmall"/>
+                            </items>
+                        </ComboBox>
+                        <Label text="Sticky options:" />
+                        <CheckBox text="ColumnHeaders"
+                            select="onSelect"/>
+                        <CheckBox text="HeaderToolbar"
+                            select="onSelect"/>
+                        <CheckBox text="InfoToolbar"
+                            select="onSelect"/>
+                        <ToggleButton id="toggleInfoToolbar"
+                            text="Hide/Show InfoToolbar"
+                            press="onToggleInfoToolbar" />
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Wide range of available products"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="추가" /></Column>
+                <Column><Text text="ProductNo" /></Column>
+                <Column><Text text="ProdectName" /></Column>
+                <Column><Text text="Price" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <ObjectIdentifier title="{view>ProductNo}" text="{view>ProdectName}"/>
+                        <Text text="{view>ProductNo}" />
+                        <Text text="{view>ProdectName}" />
+                        <Text text="{view>price}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+</br>
+
+### 실습 2: OData 모델 추가 후 EntitySet 바인딩 실습
+- oData 추가해서 바인딩 실습
+- `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정
+- 실습 1 코드에서 `view.xml` 파일만 수정
+
+<img width="536" height="348" alt="image" src="https://github.com/user-attachments/assets/03c5a025-3012-41e6-9c36-abb770ca719e" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 1. `manifest.json` 파일에서 모델 생성 확인
+<img width="373" height="169" alt="image" src="https://github.com/user-attachments/assets/27bbe5be-ded2-42b3-8fc1-23c46f5879ba" />
+</br>
+</br>
+
+### 2. Main.view.xml
+```html
+// test 프로그램
+
+<mvc:View controllerName="test1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns:l = "sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <l:Grid containerQuery="true" 
+                class="sapUiSmallMargin"
+                defaultSpan="XL3 L4 M4 S12">
+                <Input value="{view>/name/FirstName}" description="\{view>/name/FirstName}"/>
+                <Input value="{view>/name/LastName}" description="\{view>/name/LastName}"/>
+                <Input value="{view>/age}" description="\{view>/age}"/>
+                <Input value="{view>/salary}" description="\{view>/salary}"/>
+        </l:Grid>
+
+        <!-- sap.m.table 추가 -->
+        <Table id="idPersonTable"
+            inset="false"
+            items="{ZCODE_PERSON2_SRV>/PersonSet}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Person" level="H2"/>
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Person"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="Perno" /></Column>
+                <Column><Text text="Name" /></Column>
+                <Column><Text text="Memo" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{ZCODE_PERSON2_SRV>Perno}" />
+                        <ObjectIdentifier title="{ZCODE_PERSON2_SRV>Firstname}" text="{ZCODE_PERSON2_SRV>Lastname}"/>
+                        <Text text="{ZCODE_PERSON2_SRV>Memo}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+
+        <Table id="idProductsTable"
+            inset="false"
+            items="{/Carriers}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Products" level="H2"/>
+                        <ToolbarSpacer />
+                        <ComboBox id="idPopinLayout"
+                            placeholder="Popin layout options"
+                            change="onPopinLayoutChanged"
+                            items="{view>/Combo}">
+                            <items>
+                                <core:Item  text="{view>text}" key="{view>key}"/>
+                            </items>
+                        </ComboBox>
+                        <Label text="Sticky options:" />
+                        <CheckBox text="ColumnHeaders" select="onSelect"/>
+                        <CheckBox text="HeaderToolbar" select="onSelect"/>
+                        <CheckBox text="InfoToolbar" select="onSelect"/>
+                        <ToggleButton id="toggleInfoToolbar" text="Hide/Show InfoToolbar" press="onToggleInfoToolbar" />
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Wide range of available products"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="Carrid" /></Column>
+                <Column><Text text="Carrname" /></Column>
+                <Column><Text text="Currcode" /></Column>
+                <Column><Text text="Url" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{Carrid}" />
+                        <Text text="{Carrname}" />
+                        <Text text="{Currcode}" />
+                        <Text text="{Url}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+</br>
+
+### 실습 3: getProperty / getData를 이용한 모델 데이터 조회 실습
+- `getProperty` 와 `getData` 이용 실습
+- 버튼 클릭시 입력한 값이 출력
+- 실습 1 코드에서 `controller.js` 파일만 수정
+</br>
+
+<img width="376" height="217" alt="image" src="https://github.com/user-attachments/assets/49bdb5f6-870a-4870-8230-df640d1caa0d" />
+</br>
+
+<img width="254" height="143" alt="image" src="https://github.com/user-attachments/assets/ef7fd498-c512-4bd4-8862-a9a40adf9a4c" />
+
+</br>
+</br>
+</br>
+
+### 1. Main.view.xml
+```html
+// test 프로그램
+
+<Table id="idProductsTable"
+    inset="false"
+    items="{/Carriers}">
+    <headerToolbar>
+        <OverflowToolbar>
+            <content>
+                <Title text="Products" level="H2"/>
+                <ToolbarSpacer />
+                <Button text="버튼" press="onPress" />
+            </content>
+        </OverflowToolbar>
+    </headerToolbar>
+    <infoToolbar>
+        <OverflowToolbar>
+            <Label text="Wide range of available products"/>
+        </OverflowToolbar>
+    </infoToolbar>
+    <columns>
+        <Column><Text text="Carrid" /></Column>
+        <Column><Text text="Carrname" /></Column>
+        <Column><Text text="Currcode" /></Column>
+        <Column><Text text="Url" /></Column>
+    </columns>
+    <items>
+        <ColumnListItem vAlign="Middle">
+            <cells>
+                <Text text="{Carrid}" />
+                <Text text="{Carrname}" />
+                <Text text="{Currcode}" />
+                <Text text="{Url}" />
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+```
+</br>
+</br>
+
+### 2. Main.controller.js
+```java
+// test 프로그램
+onPress: function () {
+    let oModel = this.getView().getModel("view");
+    let oData = oModel.getProperty("/");            // oModel.getData();
+    sap.m.MessageBox.information(
+        `이름:  ${oData.name.FirstName}${oData.name.LastName} 
+        나이:  ${oData.age} 
+        연봉:  ${oData.salary}`
+    );
+}
+```
+</br>
+</br>
+</br>
+
+### 실습 4: Table 행 선택 시 BindingContext로 데이터 조회 실습
+- Table row 클릭시 해당 row의 데이터 가져오기 실습
+- getBinding 이용
+  
+<img width="474" height="320" alt="image" src="https://github.com/user-attachments/assets/f8ae09ed-684a-4713-9e42-7a40e71191b4" />
+</br>
+</br>
+</br>
+
+### 1. Main.view.xml
+- `selectionChange`와 `mode` 설
+```html
+// test 프로그램
+<Table id="idProductsTable"
+            inset="false"
+            mode="SingleSelectLeft"
+            selectionChange="onSelectionChange"
+            items="{/Carriers}">
+```
+</br>
+</br>
+
+### 2. Main.controller.js
+```java
+// test 프로그램
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onSelectionChange: function(oEvent) {
+            let oModel = this.getView().getModel();
+            let sPath = oEvent.getParameters().listItem.getBindingContext().getPath();
+            let oData = oModel.getProperty(sPath);
+            sap.m.MessageBox.information(
+                `Carrid:  ${oData.Carrid} 
+                Carrname:  ${oData.Carrname} 
+                Currcode:  ${oData.Currcode}
+                Url:  ${oData.Url}`
+            );
+        }
+    });
+});
+```
+</br>
+</br>
+
+---
+
+</br>
+
+
 
