--- a/RAP/5-3. NEW FIORI 총정리.md
+++ b/RAP/5-3. NEW FIORI 총정리.md
@@ -518,5 +518,607 @@ sap.ui.define([
 
 </br>
 
+# 02/05
+</br>
+
+## <  핵심 개념 >
+- **1) `read()` 로 `GET_ENTITY` 호출 시, 문자 타입 키는 반드시 ' '로 감싸야 함**
+```java
+this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, ...)
+```
+
+- **2) `sap.ui.table.Table` 정리**
+
+| 구분 | 의미 | XML에서 쓰는 방식 | 예시 |
+|---|---|---|---|
+| Properties | 값 설정 | 속성 | selectionMode="Single" |
+| Aggregations | 자식 컨트롤 | 태그 | <t:columns> |
+| Associations | ID 연결 | 속성(ID) | ariaLabelledBy="titleId" |
+| Events | 이벤트 핸들러 | 속성 | rowSelectionChange="onSelect" |
+| Methods | 함수 | JS에서만 사용 | getSelectedIndex() |
+
+- **3) `m.Table` → 모바일·단순 조회용 List 기반 테이블, `ui.table.Table` → 데스크탑·대량 데이터용 ALV 스타일 Grid 테이블**
+- **4) `SEGW` : OData 서비스 모델 설계 및 Runtime 클래스 생성**
+- **5) `/n/IWFND/MAINT_SERVICE` : OData 서비스 등록·활성화 관리**
+- **6) `/n/IWFND/GW_CLIENT` : OData 서비스 URL 호출 및 테스트**
+</br>
+</br>
+
+## < API 문서 보는 법 >
+- **1) `Properties` : 테이블의 전체 설정값(행 수, 선택 방식 등)**
+- **2) `Aggregations` : 테이블이 포함하는 구성요소(컬럼, 행 데이터)**
+- **3) `Events` : 사용자 동작을 감지하는 이벤트(행 선택, 셀 클릭)**
+- **4) `Methods` : JS에서 테이블을 제어·데이터를 가져오는 함수들**
+- **5) `Constructor` : 테이블 생성 시 초기 설정 정보**
+- **6) `Associations` : 다른 컨트롤과 ID로 연결되는 관계(실무 사용 적음)**
+</br>
+</br>
+
+---
+
+</br>
+
+## < FIORI 함수 >
+</br>
+
+### 1) 컨트롤러 한정 전역 변수
+- 해당 컨트롤러 내부에서는 전역처럼 사용
+- 다른 컨트롤러에서는 접근 불가
+```java
+this._oPersonModel = this.getOwnerComponent().getModel();
+```
+</br>
+</br>
+
+### 2) OData 단건 조회 (EntitySet Read)
+- 키가 1개면 필드명 생략 가능 → `/EntitySet('값')`
+- 키가 여러 개면 키 이름 필수 → `/EntitySet(key1='값', key2='값')`
+```java
+// /EntitySet('KeyValue') → 단건
+this._oPersonModel.read("/PersonSet('9001')", {
+    success: function (oReturn) {
+        // oReturn = 단일 Entity
+        // oReturn.FieldName 형태로 바로 접근
+        debugger;
+    }.bind(this),
+    error: function (oError) {
+        console.log("Read EntitySet 에러!", oError);
+    }
+});
+
+// /EntitySet → 다건
+this._oPersonModel.read("/PersonSet", {
+    success: function (oReturn) {
+        // oReturn.results = Entity 배열
+        // oReturn.results[0].FieldName 형태로 접근
+        debugger;
+    }.bind(this),
+    error: function (oError) {
+        console.log("Read EntitySet 에러!", oError);
+    }
+});
+```
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < SAP Gateway OData 서비스 생성·활성·테스트 흐름 (TCODE: `SEGW`) >
+- SEGW에서 OData 설계 → MAINT_SERVICE에서 서비스 활성화 → GW_CLIENT에서 URL 테스트
+<img width="315" height="175" alt="image" src="https://github.com/user-attachments/assets/dc8325ac-9057-42a3-bd43-9c3f032c3045" />
+</br>
+</br>
+
+**SAP OData 구축 요약**
+1. DB 생성 (SE11): 테이블 생성 및 PK 설정 필수.
+2. 모델 정의 (SEGW): 테이블 Import 후 햇님(Generate) 클릭.
+3. 로직 구현 (DPC_EXT): GET_ENTITYSET 메서드 Redefine 및 조회 코드 작성.
+4. 서비스 활성화 (/n/IWFND/MAINT_SERVICE): 서비스 등록 및 Green 상태 확인.
+5. 최종 테스트 (/n/IWFND/GW_CLIENT): 데이터 출력 확인.
+</br>
+</br>
+</br>
+
+### SAP Gateway 주요 T-Code 역할 정리
+- `SEGW` → OData 서비스 모델(Entity, EntitySet 등) 설계 및 Runtime 클래스 생성
+- `/n/IWFND/MAINT_SERVICE` → 생성한 OData 서비스를 Gateway에 등록하고 활성화
+- `/n/IWFND/GW_CLIENT` → OData 서비스 URL 호출 및 CRUD 테스트 수행
+  
+<img width="646" height="300" alt="image" src="https://github.com/user-attachments/assets/735223ec-bbe0-4e14-8402-eaa7d8bcf40c" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 1) OData 연동을 위한 DB 테이블 정의
+- OData 서비스에서 사용할 사원 정보 테이블(ZTEMPINFO_B03)을 생성하고 필드와 Key를 정의
+
+<img width="513" height="225" alt="image" src="https://github.com/user-attachments/assets/5b3705b3-7aa1-4484-bfb3-95a05db69d8e" />
+</br>
+</br>
+</br>
+
+### 2) `SEGW` 에서 OData 프로젝트 생성
+- SAP Gateway Service Builder(SEGW)에서 Employee OData 서비스를 위한 프로젝트를 생성
+  
+<img width="356" height="116" alt="image" src="https://github.com/user-attachments/assets/5390dc8b-e248-4d13-b958-82e492b1e51c" />
+
+<img width="428" height="256" alt="image" src="https://github.com/user-attachments/assets/b3736899-0229-402e-a84e-e2372d021a7b" />
+</br>
+</br>
+</br>
+
+### 3) DB 테이블 기반 Entity 생성
+- SEGW에서 DDIC 테이블(ZTEMPINFO_B03)을 Import하여 Employee Entity와 EntitySet을 생성
+
+<img width="375" height="251" alt="image" src="https://github.com/user-attachments/assets/216e5112-5bf7-45a4-a78c-399dd9f8d8ff" />
+
+<img width="433" height="268" alt="image" src="https://github.com/user-attachments/assets/316f999a-9060-4eb2-bfd9-89a30ee88b7a" />
+
+</br>
+</br>
+</br>
+
+### 4) Entity 필드 속성 및 Key 설정
+- Employee Entity의 필드 타입을 확인하고 Primary Key를 지정하며, Nullable 옵션으로 해당 필드의 필수 입력 여부(NULL 허용/불가)를 설정
+  
+<img width="590" height="256" alt="image" src="https://github.com/user-attachments/assets/a4cee978-4e20-4308-bcf9-134187c31be8" />
+</br>
+</br>
+</br>
+
+### 5) Runtime Artifacts 생성 및 변경사항 반영
+- SEGW에서 Data Model(Entity, Property, Key 등)을 변경하면, 실제 실행에 사용되는 Runtime 클래스(MPC/DPC)에 그 변경사항을 반영
+- 구조나 설정이 변경되면 반드시 다시 Generate 버튼을 눌러야 변경사항이 반영됨
+  
+<img width="409" height="161" alt="image" src="https://github.com/user-attachments/assets/44019cff-dc54-4d1c-a9cf-672bf28de402" />
+
+<img width="433" height="238" alt="image" src="https://github.com/user-attachments/assets/806f86c5-056b-4565-bea0-5b950f82c6f2" />
+</br>
+</br>
+</br>
+
+### 6) OData 서비스 등록 및 활성화
+- SEGW에서 생성한 OData 서비스를 Gateway 시스템에 등록(Register)하여 외부에서 호출 가능하게 활성화
+
+<img width="508" height="201" alt="image" src="https://github.com/user-attachments/assets/7bf7fa93-0778-4f27-9f57-0115ceb1f953" />
+
+<img width="675" height="469" alt="image" src="https://github.com/user-attachments/assets/40404773-edfa-4fcc-afd3-001fc8f32935" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 7) Gateway 서비스 관리 및 활성화 확인
+- /IWFND/MAINT_SERVICE에서 등록된 OData 서비스를 조회하고 활성화 상태, System Alias, ICF 노드를 관리
+  
+<img width="586" height="472" alt="image" src="https://github.com/user-attachments/assets/9727bf15-2d8c-4259-90e0-c9369d4dc73e" />
+</br>
+</br>
+</br>
+
+### 8) SAP Gateway Client를 통한 OData 서비스 테스트
+- `SEGW` 또는 `/IWFND/GW_CLIENT` 에서 OData 서비스 URL을 실행하여 EntitySet 조회 및 응답 데이터를 테스트
+
+<img width="638" height="299" alt="image" src="https://github.com/user-attachments/assets/77b3e903-f2cb-457d-b72d-2fddb014316d" />
+
+<img width="651" height="387" alt="image" src="https://github.com/user-attachments/assets/008dbaf0-6f99-4b6b-9c37-79fcc4bd9392" />
+</br>
+</br>
+</br>
+
+### 9) SAP Gateway Client에서 CRUD 테스트
+- GET/POST/PUT/DELETE 방식으로 Read·Create·Update·Delete 동작을 테스트
+- 200번대 응답은 성공이며, 오류 발생 시 결과가 빨간색으로 표시됨
+- POST 요청은 Body에 데이터를 담아 전송하여 데이터 생성 수행
+
+<img width="626" height="384" alt="image" src="https://github.com/user-attachments/assets/61f6c753-907f-4fe0-b19f-fabb9650955f" />
+</br>
+</br>
+</br>
+
+### 10) EntitySet 선택 및 응답 형식 설정
+- EntitySet을 더블클릭하면 URL이 자동 완성되며, 기본 응답은 XML 형식이고 `$format=json` 옵션을 추가하면 JSON 형식으로 응답이 반환됨
+
+<img width="654" height="331" alt="image" src="https://github.com/user-attachments/assets/ed7b868b-3ddd-48b7-a81a-a3d8b2e6f2cf" />
+
+<img width="650" height="352" alt="image" src="https://github.com/user-attachments/assets/156f56d8-c6ff-4c62-9969-c6b63e86b178" />
+</br>
+</br>
+</br>
+
+### 11) GET_ENTITYSET 메소드 구현
+- DPC_EXT 클래스에서 `EMPLOYEESET_GET_ENTITYSET` 메소드를 구현하여 EmployeeSet 조회 시 DB 테이블(ZTEMPINFO_B03)에서 데이터를 SELECT하여 응답으로 반환
+- `et_entityset` → OData EntitySet 결과를 담아 UI로 반환하는 출력용 내부 테이블
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITYSET
+  method EMPLOYEESET_GET_ENTITYSET.
+    SELECT * FROM ztempinfo_b03
+      INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+  endmethod.
+```
+<img width="716" height="335" alt="image" src="https://github.com/user-attachments/assets/af85cfc5-b0fc-456d-b67e-f9e75804f986" />
+
+<img width="713" height="371" alt="image" src="https://github.com/user-attachments/assets/937b1c4c-5594-4a17-95f3-57d93547492a" />
+
+</br>
+</br>
+</br>
+
+### 12) GET_ENTITY 메소드 구현 (단건 조회)
+- DPC_EXT 클래스의 `EMPLOYEESET_GET_ENTITY` 메소드에서 키 필드(Empno, Projod)를 추출해 DB 테이블(ZTEMPINFO_B03)에서 단건 데이터를 조회하여 반환
+- `IT_KEY_TAB` → GET_ENTITY 요청 URL에 포함된 Key 필드 값 목록 (WHERE 조건용)
+- `ER_ENTITY` → 조회된 단건 데이터를 담아 OData 응답으로 반환하는 Entity 구조
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITY
+  method EMPLOYEESET_GET_ENTITY.
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    "/EntitySet(key1='값1',key2='값2')
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name. " 키 프로퍼티의 이름(Entity기준)
+        WHEN 'Empno'.
+          ls_data-empno = ls_key-value.
+        WHEN 'Projod'.
+          ls_data-projod = ls_key-value.
+        WHEN OTHERS.
+      ENDCASE.
+    ENDLOOP.
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO @DATA(ls_result)
+      WHERE empno = @ls_data-empno
+        AND projod = @ls_data-projod.
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_result TO er_entity.
+    ENDIF.
+  endmethod.
+```
+
+<img width="716" height="335" alt="image" src="https://github.com/user-attachments/assets/715b944b-d62c-453c-ac41-7599f0a3bae4" />
+
+<img width="714" height="282" alt="image" src="https://github.com/user-attachments/assets/a7cc3a8e-035c-467d-b1b9-c091413b6bda" />
+
+<img width="827" height="213" alt="image" src="https://github.com/user-attachments/assets/e757fc4f-233a-407a-b256-0cdb0665c806" />
+
+<img width="739" height="342" alt="image" src="https://github.com/user-attachments/assets/c0c609bc-93d6-4f24-9dc6-38150f577a65" />
+</br>
+</br>
+</br>
+
+### 13) GET_ENTITY 호출 시 Key 작성 규칙
+- OData GET_ENTITY 호출에서는 Key가 1개면 해당 값만 작성하고, 복합 Key일 경우 모든 Key 값을 `(Key1='값',Key2='값')` 형태로 반드시 모두 작성해야 함
+
+<img width="707" height="282" alt="image" src="https://github.com/user-attachments/assets/624303af-4ac0-4aab-863b-4127efe45164" />
+
+- 전체 조회
+<img width="797" height="375" alt="image" src="https://github.com/user-attachments/assets/88ca391d-fc94-4dec-a72a-f27519dd12bc" />
+
+
+- 단 건 조회
+<img width="806" height="373" alt="image" src="https://github.com/user-attachments/assets/013df931-6e69-407e-86e2-1caba491f49d" />
+</br>
+</br>
+</br>
+
+### 14) SAP Fiori Generator – OData 서비스 선택
+<img width="646" height="307" alt="image" src="https://github.com/user-attachments/assets/44dd9b17-bd83-4a9a-ac70-2bfa62f05bbf" />
+</br>
+</br>
+</br>
+
+### 15) OData 서비스 메타데이터 갱신
+- Manage Service Models에서 OData 서비스의 메타데이터를 Refresh & Save 하여 변경된 서비스 구조를 Fiori 앱에 반영
+  
+<img width="602" height="298" alt="image" src="https://github.com/user-attachments/assets/ea453733-0aa0-4d44-8605-b91218c80c64" />
+
+<img width="489" height="259" alt="image" src="https://github.com/user-attachments/assets/fb4c6c96-28f8-49da-aae6-aa8b49abbde0" />
+</br>
+</br>
+</br>
+
+### 추가 기능 - Entity Property–DB 필드 매핑 확인
+- SEGW의 Properties 화면에서 OData Entity 속성과 DB 테이블 필드(ABAP Field)가 정상적으로 매핑되었는지 확인하는 단계
+  
+<img width="621" height="131" alt="image" src="https://github.com/user-attachments/assets/945b6217-1d73-4421-aa86-756e3f3dcf2d" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- read로 조회 후 input에 세팅하는 실습
+<img width="474" height="244" alt="image" src="https://github.com/user-attachments/assets/431bc215-12b6-4521-9727-450b4d7a01f0" />
+
+</br>
+</br>
+</br>
+
+### 1) Main.view.xml
+```html
+// test 프로그램
+<Button text="EntitySet" press="onReadEntitySet" />
+```
+</br>
+
+### 2) Main.controller.js
+```java
+// test 프로그램
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onInit() {
+            this._oPersonModel = this.getOwnerComponent().getModel("ZCODE_PERSON2_SRV");
+        },
+        onReadEntitySet: function() {
+            // this._oPersonModel => oData V2 Model
+            let oModel = this.getView().getModel("view");
+    
+            this._oPersonModel.read("/PersonSet('9001')", {
+                success: function(oReturn) {
+                    // Request 요청이 성공하면, succcess 함수가 실행됨
+                    // console.log("Read EntitySet 성공!", oReturn);
+                    // oModel.setProperty("/salary", oReturn.results[0].Memo);
+                    oModel.setProperty("/name/FirstName", oReturn.Firstname);
+                    oModel.setProperty("/name/LastName", oReturn.Lastname);
+                    debugger;
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        }
+    });
+});
+```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1 : m.table / ui.table 행 선택 기반 단건 조회 실습
+- 테이블 중 한 행 선택하면 해당 행 정보 띄우기
+- m.table ui.table 실습
+
+<img width="540" height="243" alt="image" src="https://github.com/user-attachments/assets/5bf25e0e-e0d5-49a7-8248-499d1edfc3bc" />
+</br>
+</br>
+</br>
+
+### 1) Main.controller.js
+```java
+// project1
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("project1.controller.Main", {
+        onInit() {
+            this.oModel = this.getOwnerComponent().getModel();
+        },
+        onPress: function() {
+            let oTable = this.getView().byId("idEmployee");
+            let oItem = oTable.getSelectedItem();
+            let oData = oItem.getBindingContext().getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "m.table 버튼 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+            debugger;
+        },
+        onSelectionChange: function(oEvent) {
+            let sPath = oEvent.getParameters().listItem.getBindingContext().getPath();
+            let oData = this.oModel.getProperty(sPath);
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "m.table 행 클릭 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onPress2: function() {
+            let oTable = this.byId("idEmployee2");
+            let oIndex = oTable.getSelectedIndex();
+
+            if (oIndex < 0) return sap.m.MessageToast.show("데이터를 선택하세요.");
+
+            let oData = oTable.getContextByIndex(oIndex).getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageToast.show("ui.table 버튼으로 1건 조회", oReturn);
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onRowSelect: function(oEvent) {
+            let oRowIndex = oEvent.getParameter("rowIndex");
+            let oContext = oEvent.getParameter("rowContext");
+            let oData = oContext.getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "ui.table 행 클릭 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        }
+    });
+});
+```
+</br>
+
+### 2) Main.view.xml
+```html
+// project1
+
+<mvc:View controllerName="project1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:t="sap.ui.table"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <VBox >
+            <Table id="idEmployee"
+                class="sapUiSmallMarginBottom"
+                inset="false"
+                mode="SingleSelectLeft"
+                selectionChange="onSelectionChange"
+                items="{/EmployeeSet}">
+                <headerToolbar>
+                    <OverflowToolbar>
+                        <content>
+                            <Title text="Employee" level="H2"/>
+                            <ToolbarSpacer />
+                            <Button text="클릭" press="onPress"/>
+                        </content>
+                    </OverflowToolbar>
+                </headerToolbar>
+                <infoToolbar>
+                    <OverflowToolbar>
+                        <Label text="Employee"/>
+                    </OverflowToolbar>
+                </infoToolbar>
+                <columns>
+                    <Column><Text text="EMPNO" /></Column>
+                    <Column><Text text="PROJOD" /></Column>
+                    <Column><Text text="ASSIGNDATE" /></Column>
+                    <Column><Text text="ROLE" /></Column>
+                    <Column><Text text="MEMO" /></Column>
+                </columns>
+                <items>
+                    <ColumnListItem vAlign="Middle">
+                        <cells>
+                            <Text text="{Empno}" />
+                            <Text text="{Projod}" />
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                            <Text text="{Role}" />
+                            <Text text="{Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+
+            <t:Table rows="{/EmployeeSet}"
+                    id="idEmployee2"
+                    selectionMode="Single"
+                    selectionBehavior="RowOnly"
+                    rowSelectionChange="onRowSelect"
+                    >
+                <t:extension>
+                    <OverflowToolbar>
+                        <Title text="Employee" level="H2"/>
+                        <ToolbarSpacer />
+                        <Button text="클릭" press="onPress2"/>
+                    </OverflowToolbar>
+                </t:extension>
+                <t:columns>
+                    <t:Column>
+                        <Label text="EMPNO" />
+                        <t:template>
+                            <Text text="{Empno}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="PROJOD" />
+                        <t:template>
+                            <Text text="{Projod}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="ASSIGNDATE" />
+                        <t:template>
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="ROLE" />
+                        <t:template>
+                            <Text text="Role" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="MEMO" />
+                        <t:template>
+                            <Text text="{Memo}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </VBox>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+---
+
+</br>
 
 
